src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Agencia__c</fullName>
        <label>Agencia</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asignaciones_c__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Numero de asignaciones de casos o leads diarias para asesores telefónicos</description>
        <label>Asignaciones__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_de_promocion__c</fullName>
        <label>Director de promoción</label>
        <relationshipName>Director_promocion</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
     <fields>
        <fullName>DivisionFormula__c</fullName>
        <formula>TEXT( Divisi_n__c )</formula>
        <label>División</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gestor__c</fullName>
        <formula>Manager.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestor</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>MX_SB_VTS_ProveedorCTI__c</fullName>
        <description>Campo para especificar el nombre del proveedor al que esta asignado un usuario</description>
        <label>ProveedorCTI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MX_SB_VTS_Lista_Proveedores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MetaDiaria__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Campo creado para registrar la meta diaria de ventas por usuario</description>
        <label>Meta diaria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_PYME_Encargado_de_Campania__c</fullName>
        <description>Usuario Responsable de campaña</description>
        <label>Encargado de Campaña</label>
        <relationshipName>DependientesCampaign</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>No_Grupos_ClientesHuerfanos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tamaño de portafolio</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>NoAsignacion__c</fullName>
        <label>No Asignación</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFC__c</fullName>
        <label>RFC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmento__c</fullName>
        <label>Segmento</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TP</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>CB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>SOS__c</fullName>
        <formula>$Setup.sos_auto_setup__c.permission_set__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Canal__c</fullName>
        <label>Sub Canal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turno__c</fullName>
        <label>Turno</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matutino</fullName>
                </value>
                <value>
                    <fullName>Vespertino</fullName>
                </value>
                <value>
                    <fullName>Intermedio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usuario__c</fullName>
        <label>Usuario</label>
        <length>25</length>
        <type>Text</type>
    </fields>
<fields>
        <fullName>No_de_nomina__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>No. de nómina</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UG__c</fullName>
        <description>Unidad gestora</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>UG</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EU001_pr_Calificaci_n_Certificaci_n_EU__c</fullName>
        <label>Calificación Certificación EU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EG001_ls_Certificacion_EU__c</fullName>
        <label>Certificación EU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elegible</fullName>
                </value>
                <value>
                    <fullName>No certificable</fullName>
                </value>
                <value>
                    <fullName>Réplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segmento_Ejecutivo__c</fullName>
        <label>Segmento Ejecutivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MEDIANA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>CORPORATIVO</fullName>
                </value>
                <value>
                    <fullName>EMPRESARIAL</fullName>
                </value>
                <value>
                    <fullName>FEDERAL</fullName>
                </value>
                <value>
                    <fullName>GOBIERNO RESTO</fullName>
                </value>
                <value>
                    <fullName>GRANDES CUENTAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liga__c</fullName>
        <label>Liga</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empresas Platino</fullName>
                </value>
                <value>
                    <fullName>Empresas Diamante</fullName>
                </value>
                <value>
                    <fullName>Empresas Oro</fullName>
                </value>
                <value>
                    <fullName>Empresas Plata</fullName>
                </value>
                <value>
                    <fullName>Empresas Bronce</fullName>
                </value>
                <value>
                    <fullName>Gobierno Platino</fullName>
                </value>
                <value>
                    <fullName>Gobierno Diamante</fullName>
                </value>
                <value>
                    <fullName>Gobierno Oro</fullName>
                </value>
                <value>
                    <fullName>Gobierno Plata</fullName>
                </value>
                <value>
                    <fullName>Gobierno Bronce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Director_de_oficina__c</fullName>
        <label>Director de oficina</label>
        <relationshipName>Directores_oficina</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Director_divisional__c</fullName>
        <label>Director divisional</label>
        <relationshipName>Directores_Divisional</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>CR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <label>Oficina</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Divisi_n__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>EMPRESAS QUERETARO CONSTITUYENTES</fullName>
                </value>
                <value>
                    <fullName>GOBIERNO D.F.</fullName>
                </value>
                <value>
                    <fullName>GOBIERNO ESTADO DE MEXICO</fullName>
                </value>
                <value>
                    <fullName>SECTOR DESARROLLO SOCIAL</fullName>
                </value>
                <value>
                    <fullName>SECTOR EDUCACION</fullName>
                </value>
                <value>
                    <fullName>SECTOR INSTITUCIONES</fullName>
                </value>
                <value>
                    <fullName>SECTOR SALUD</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS AVILA CAMACHO</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS BOSQUES DE LAS LOMAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. CENTRO BANCOMER</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. GLORIETA COLON</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. LOMAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. PALMAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. POLANCO</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. REFORMA FLORENCIA</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. SAN ANGEL</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. SANTA FE</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS D.F. VALLEJO</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS TLALNEPANTLA</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS TOLUCA</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS MONTERREY REVOLUCION</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS MONTERREY SANTA CATARINA</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS MONTERREY UNIVERSIDAD NORTE</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS MONTERREY VALLE</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS Y GOBIERNO TAMPICO</fullName>
                </value>
                <value>
                    <fullName>GOBIERNO NUEVO LEON</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS CD. JUAREZ ZARAGOZA</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS HERMOSILLO</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS MEXICALI</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS Y GOBIERNO CD. JUAREZ RENACIMIENTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_ls_Banca__c</fullName>
        <label>Banca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red BEyG</fullName>
                </value>
                <value>
                    <fullName>Red PyME</fullName>
                </value>
                <value>
                    <fullName>Red CF</fullName>
                </value>
                <value>
                    <fullName>Red HP</fullName>
                </value>
                <value>
                    <fullName>Red HI</fullName>
                </value>
                <value>
                    <fullName>Red Hipotecaria</fullName>
                </value>
                <value>
                    <fullName>Red HI Venta Remota</fullName>
                </value>
                <value>
                    <fullName>Red BPyP</fullName>
                </value>
                <value>
                    <fullName>Red Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
   <fields>
        <fullName>VP_ls_Zona__c</fullName>
        <description>Zona del usuario.</description>
        <inlineHelpText>Solo Aplica para Banca PyME</inlineHelpText>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Divisi_n__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGUASCALIENTES</fullName>
                </value>
                <value>
                    <fullName>CELAYA</fullName>
                </value>
                <value>
                    <fullName>GUANAJUATO</fullName>
                </value>
                <value>
                    <fullName>IRAPUATO</fullName>
                </value>
                <value>
                    <fullName>LEON ORIENTE</fullName>
                </value>
                <value>
                    <fullName>LEON PONIENTE</fullName>
                </value>
                <value>
                    <fullName>PACHUCA NORTE</fullName>
                </value>
                <value>
                    <fullName>PACHUCA SUR</fullName>
                </value>
                <value>
                    <fullName>QUERETARO ORIENTE</fullName>
                </value>
                <value>
                    <fullName>QUERETARO PONIENTE</fullName>
                </value>
                <value>
                    <fullName>SAN LUIS POTOSI FORANEA</fullName>
                </value>
                <value>
                    <fullName>SAN LUIS POTOSI URBANA</fullName>
                </value>
                <value>
                    <fullName>ZACATECAS</fullName>
                </value>
                <value>
                    <fullName>AZCAPOTZALCO</fullName>
                </value>
                <value>
                    <fullName>CUAUHTEMOC 1</fullName>
                </value>
                <value>
                    <fullName>CUAUTITLAN</fullName>
                </value>
                <value>
                    <fullName>ECATEPEC</fullName>
                </value>
                <value>
                    <fullName>GUSTAVO A. MADERO</fullName>
                </value>
                <value>
                    <fullName>MIGUEL HIDALGO 1</fullName>
                </value>
                <value>
                    <fullName>NAUCALPAN</fullName>
                </value>
                <value>
                    <fullName>SATELITE</fullName>
                </value>
                <value>
                    <fullName>TLALNEPANTLA</fullName>
                </value>
                <value>
                    <fullName>TOLUCA NORTE</fullName>
                </value>
                <value>
                    <fullName>TOLUCA SUR</fullName>
                </value>
                <value>
                    <fullName>TULTITLAN</fullName>
                </value>
                <value>
                    <fullName>ALVARO OBREGON</fullName>
                </value>
                <value>
                    <fullName>BENITO JUAREZ</fullName>
                </value>
                <value>
                    <fullName>BENITO JUAREZ 2</fullName>
                </value>
                <value>
                    <fullName>COYOACAN</fullName>
                </value>
                <value>
                    <fullName>CUAJIMALPA LAS AGUILAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU001_un_Meta_Reuni_n_Individual__c</fullName>
        <label>Meta Reunión Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPyP_ls_NombreSucursal__c</fullName>
        <description>Campo creado para la Banca Patrimonial y Privada que es dependiente de la Division</description>
        <label>Nombre Sucursal BPyP</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Divisi_n__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0680 LOMAS</fullName>
                </value>
                <value>
                    <fullName>4214 LOMAS VERDES</fullName>
                </value>
                <value>
                    <fullName>4221 MAZARIK</fullName>
                </value>
                <value>
                    <fullName>6336 UHN MÉXICO</fullName>
                </value>
                <value>
                    <fullName>6340 TORRE BANCOMER</fullName>
                </value>
                <value>
                    <fullName>6341 SATELITE</fullName>
                </value>
                <value>
                    <fullName>6342 CENTRO BANCOMER</fullName>
                </value>
                <value>
                    <fullName>6343 PEDREGAL</fullName>
                </value>
                <value>
                    <fullName>6356 PASEOS DE CHURUBUSCO</fullName>
                </value>
                <value>
                    <fullName>6357 VITO ALESSIO</fullName>
                </value>
                <value>
                    <fullName>6358 INTERLOMAS</fullName>
                </value>
                <value>
                    <fullName>6379 LILAS</fullName>
                </value>
                <value>
                    <fullName>6385 BANCA PERISUR</fullName>
                </value>
                <value>
                    <fullName>6393 BANCA PLAZA FORUM</fullName>
                </value>
                <value>
                    <fullName>6398 BANCA ACOXPA</fullName>
                </value>
                <value>
                    <fullName>6400 BANCA DEL VALLE</fullName>
                </value>
                <value>
                    <fullName>6402 TOLUCA</fullName>
                </value>
                <value>
                    <fullName>6345 ZACATECAS</fullName>
                </value>
                <value>
                    <fullName>6365 IRAPUATO</fullName>
                </value>
                <value>
                    <fullName>6366 CELAYA</fullName>
                </value>
                <value>
                    <fullName>6372 MOROLEON</fullName>
                </value>
                <value>
                    <fullName>6384 AGUASCALIENTES</fullName>
                </value>
                <value>
                    <fullName>6388 PACHUCA</fullName>
                </value>
                <value>
                    <fullName>6390 QUERETARO</fullName>
                </value>
                <value>
                    <fullName>6391 SAN LUIS POTOSI</fullName>
                </value>
                <value>
                    <fullName>6405 LEON</fullName>
                </value>
                <value>
                    <fullName>0708 MONTERREY VALLE SENA</fullName>
                </value>
                <value>
                    <fullName>6348 DURANGO</fullName>
                </value>
                <value>
                    <fullName>6354 REYNOSA</fullName>
                </value>
                <value>
                    <fullName>6371 MONTERREY COUNTRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divisi_n__c</fullName>
        <label>División</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>VP_ls_Banca__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BAJIO</fullName>
                </value>
                <value>
                    <fullName>GOBIERNO CENTRO</fullName>
                </value>
                <value>
                    <fullName>METROPOLITANA</fullName>
                </value>
                <value>
                    <fullName>NORESTE</fullName>
                </value>
                <value>
                    <fullName>NOROESTE</fullName>
                </value>
                <value>
                    <fullName>OCCIDENTE</fullName>
                </value>
                <value>
                    <fullName>SUR</fullName>
                </value>
                <value>
                    <fullName>SURESTE</fullName>
                </value>
                <value>
                    <fullName>CORPORATIVA</fullName>
                </value>
                <value>
                    <fullName>BAJIO PYME</fullName>
                </value>
                <value>
                    <fullName>METROPOLITANA NORTE PYME</fullName>
                </value>
                <value>
                    <fullName>METROPOLITANA SUR PYME</fullName>
                </value>
                <value>
                    <fullName>NORESTE PYME</fullName>
                </value>
                <value>
                    <fullName>NOROESTE PYME</fullName>
                </value>
                <value>
                    <fullName>OCCIDENTE PYME</fullName>
                </value>
                <value>
                    <fullName>REGIONAL NORESTE PYME</fullName>
                </value>
                <value>
                    <fullName>REGIONAL OCCIDENTE PYME</fullName>
                </value>
                <value>
                    <fullName>SUR PYME</fullName>
                </value>
                <value>
                    <fullName>SURESTE PYME</fullName>
                </value>
                <value>
                    <fullName>METRO NORTE</fullName>
                </value>
                <value>
                    <fullName>METRO SUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Administrador del sistema</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
	<validationRules>
        <fullName>MX_BPP_RestringirCamposUser</fullName>
        <active>true</active>
        <description>Regla que Restringe campos standard de usuarios con perfil de BPyP</description>
        <errorConditionFormula>IF(
 AND(
OR(
$Profile.Name=&apos;BPyP STAFF&apos;,
$Profile.Name=&apos;BPyP Estandar&apos;,
$Profile.Name=&apos;BPyP Director Oficina&apos;,
$Profile.Name=&apos;BPyP Director Divisional&apos;
),
OR(
 ISCHANGED( Title ), 
 ISCHANGED(  FederationIdentifier ),
 ISCHANGED(  Segmento_Ejecutivo__c ),
 ISCHANGED(   EmployeeNumber )
), 
NOT(ISNEW())
)
,true,false)</errorConditionFormula>
        <errorMessage>No es posible modificar este campo, contacte a su Administrador.</errorMessage>
    </validationRules>
</CustomObject>